--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
-    <link href="http://picnicss.com/releases/v1.1.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='css/picnic.css') }}" rel="stylesheet" type="text/css">
     {% block head %}{% endblock %}
 </head>
 
