smoothing out a few rough edges

--- a/application/templates/_blank.html
+++ b/application/templates/_blank.html
@@ -10,4 +10,5 @@
 
 {% block js %}
     {{ super() }}
+    {# <script src="{{ url_for('static', filename='js/file.js') }}" type="text/javascript"></script> #}
 {% endblock %}
