--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href="{{ url_for('static', filename='css/picnic.css') }}" rel="stylesheet" type="text/css">
     {% block head %}{% endblock %}
 </head>
