--- a/application/templates/site/index.html
+++ b/application/templates/site/index.html
@@ -7,3 +7,8 @@
 {% block content %}
     <h1>Hello World!</h1>
 {% endblock %}
+
+{% block js %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='js/index.js') }}" type="text/javascript"></script>
+{% endblock %}
